test/bad-call.stderr
Error: Line 2, col 21:
  1 | let h = 3
> 2 | let g = fn(): Num { h() }
                          ^~~
  3 | let f = fn(): Num { g() }

Invalid call