test/bad-call.ursa
let h = 3
let g = fn(): Num { h() }
let f = fn(): Num { g() }
f()
